Add options to disable individual log levels
* Added Options > Logging submenu with the options for individually disabling the following log message levels:
    * Debug   (disabled by default)
    * Info    (enabled, but no Info messages exist)
    * Warning (enabled by default)
    * Fatal   (enabled by default)
* Removed the "Last entry read from config" text from the Fatal error message window.
* Restored Error_Debug macro (now that it's conditionally disabled).
* Added Error_<Level>F functions for printf-style logging.

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -95,6 +95,13 @@ BEGIN
         MENUITEM "&Tooltip Sound",              IDM_TOOLTIPSOUND,CHECKED
 //#endif
         MENUITEM SEPARATOR
+        POPUP "Logging"
+        BEGIN
+            MENUITEM "Debug",                   IDM_LOGGING_DEBUG
+            MENUITEM "Info",                    IDM_LOGGING_INFO,CHECKED
+            MENUITEM "Warning",                 IDM_LOGGING_WARNING,CHECKED
+            MENUITEM "Fatal",                   IDM_LOGGING_FATAL,CHECKED
+        END
         POPUP "&Scale"
         BEGIN
             MENUITEM "x&1",                     IDM_SCALE_X1,CHECKED
