Add Trace error log level to disable firstcalls
* Add trace to error log levels and the options menu. Turning off this will silence functions using log_firstcall.
* This is a bit of a hack so that we can use the same API for disabling trace. common.h includes a predeclaration for Gods98::Error_IsTraceVisible(). Ughh...

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -98,6 +98,7 @@ BEGIN
         POPUP "Logging"
         BEGIN
             MENUITEM "Debug",                   IDM_LOGGING_DEBUG
+            MENUITEM "Trace",                   IDM_LOGGING_TRACE,CHECKED
             MENUITEM "Info",                    IDM_LOGGING_INFO,CHECKED
             MENUITEM "Warning",                 IDM_LOGGING_WARNING,CHECKED
             MENUITEM "Fatal",                   IDM_LOGGING_FATAL,CHECKED
