Fix Reward.cpp using ClInclude in vcxproj
* An early commit noted this as being fixed, but the vcxproj file was never included in the committed to do so. This fixes Reward.cpp being treated as an include file, and causing linker errors for rewardGlobs.

--- a/src/openlrr/openlrr.vcxproj
+++ b/src/openlrr/openlrr.vcxproj
@@ -330,7 +330,7 @@
     <ClCompile Include="game\front\Credits.cpp" />
     <ClCompile Include="game\front\FrontEnd.cpp" />
     <ClCompile Include="game\front\Loader.cpp" />
-    <ClInclude Include="game\front\Reward.cpp" />
+    <ClCompile Include="game\front\Reward.cpp" />
     <ClCompile Include="game\Game.cpp" />
     <ClCompile Include="game\GameState.cpp" />
     <ClCompile Include="game\interface\Advisor.cpp" />
