Add Shortcuts, make all keybinds configurable.
* Added game/Shortcuts module, which handles storing IDs for all possible keybinds that we can override.
* Added engine/input/InputButton module for base button state management to use with keybinds.
* Replaced all supported instances of using individual key checks with Shortcut checks.
* The only places that weren't changed were AcceptRename, and F2 shortcut keys defined in Lego.cfg. The first is unlikely to get a keybind ever, the second will require a lot more work.
* Added the configuration file: Settings/Shortcuts.cfg. This file is where all shortcut keybinds are defined, this file can be reloaded at runtime from the options menu, or by using Ctrl+Shift+K.
* Added numerous extra debug keys/cheats to work with the keybinds system.
* Some debug keys were downgraded to normal keys, or sidegraded to EditMode keys:
    * (normal) SwitchRadarMode
    * (normal) Change game speed (except for FreezeGameSpeed at 0%).
    * (normal) Toggle Music/Sound.
    * (edit mode) Place Electric Fence/Spider Web.
* Many existing keybinds have been changed in the default Shortcuts.cfg, to avoid conflicts and duplicate actions. Others have been changed to be harder to accidentally hit. Like [L] to instantly win the level is now [LCtrl]+[LShift]+[L]. It's the same with all other of those end level keys.

* Visual Studio build process now has 2 additional steps in post.
    1. `OpenLRR(-d).exe` executable will be copied to `bin/` if newer.
    2. `Settings/Shortcuts.cfg` will be copied to `bin/Settings/` if newer.

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -95,6 +95,7 @@ BEGIN
         MENUITEM "&Tooltip Sound",              IDM_TOOLTIPSOUND,CHECKED
 //#endif
         MENUITEM SEPARATOR
+        MENUITEM "Reload &Keybinds"             IDM_RELOAD_KEYBINDS
         POPUP "Logging"
         BEGIN
             MENUITEM "Debug",                   IDM_LOGGING_DEBUG
