--- a/src/openlrr/openlrr.vcxproj
+++ b/src/openlrr/openlrr.vcxproj
@@ -108,6 +108,15 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>$(SolutionDir)lib\d3drm\d3drm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y /d "$(SolutionDir)OpenLRR-d.exe" "$(OutDir)"</Command>
+      <Message>Copying OpenLRR debug executable</Message>
+    </PostBuildEvent>
+    <CustomBuildStep>
+      <Command>xcopy /y /d "$(SolutionDir)data\Settings\Shortcuts.cfg" "$(OutDir)Settings\"</Command>
+      <Message>Copying OpenLRR data files</Message>
+      <Outputs>$(OutDir)always_run_this_build_step.txt</Outputs>
+    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -126,6 +135,15 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>$(SolutionDir)lib\d3drm\d3drm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy /y /d "$(SolutionDir)OpenLRR.exe" "$(OutDir)"</Command>
+      <Message>Copying OpenLRR release executable</Message>
+    </PostBuildEvent>
+    <CustomBuildStep>
+      <Command>xcopy /y /d "$(SolutionDir)data\Settings\Shortcuts.cfg" "$(OutDir)Settings\"</Command>
+      <Outputs>$(OutDir)always_run_this_build_step.txt</Outputs>
+      <Message>Copying OpenLRR data files</Message>
+    </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -189,8 +207,10 @@
     <ClInclude Include="engine\gfx\Viewports.h" />
     <ClInclude Include="engine\Graphics.h" />
     <ClInclude Include="engine\Init.h" />
+    <ClInclude Include="engine\input\InputButton.hpp" />
     <ClInclude Include="engine\input\Input.h" />
     <ClInclude Include="engine\input\Keys.h" />
+    <ClInclude Include="engine\input\MouseButtons.h" />
     <ClInclude Include="engine\Main.h" />
     <ClInclude Include="engine\undefined.h" />
     <ClInclude Include="engine\util\Compress.h" />
@@ -227,6 +247,7 @@
     <ClInclude Include="game\interface\ScrollInfo.h" />
     <ClInclude Include="game\interface\TextMessages.h" />
     <ClInclude Include="game\interface\ToolTip.h" />
+    <ClInclude Include="game\Shortcuts.hpp" />
     <ClInclude Include="game\mission\Messages.h" />
     <ClInclude Include="game\mission\NERPsFile.h" />
     <ClInclude Include="game\mission\NERPsFunctions.h" />
@@ -314,7 +335,9 @@
     <ClCompile Include="engine\Graphics.cpp" />
     <ClCompile Include="engine\Init.cpp" />
     <ClCompile Include="engine\input\Input.cpp" />
+    <ClCompile Include="engine\input\InputButton.cpp" />
     <ClCompile Include="engine\input\Keys.cpp" />
+    <ClCompile Include="engine\input\MouseButtons.cpp" />
     <ClCompile Include="engine\Main.cpp" />
     <ClCompile Include="engine\util\Compress.cpp" />
     <ClCompile Include="engine\util\Dxbug.cpp" />
@@ -347,6 +370,7 @@
     <ClCompile Include="game\interface\ScrollInfo.cpp" />
     <ClCompile Include="game\interface\TextMessages.cpp" />
     <ClCompile Include="game\interface\ToolTip.cpp" />
+    <ClCompile Include="game\Shortcuts.cpp" />
     <ClCompile Include="game\mission\Messages.cpp" />
     <ClCompile Include="game\mission\NERPsFile.cpp" />
     <ClCompile Include="game\mission\NERPsFunctions.cpp" />
