Explosion and selection modifier cheat shortcuts
* Added modifier shortcut to include monsters/spiderwebs in selections.
* Added modifier shortcut to include resources/equipment in selections.
* Emerge shortcut can now emerge slimy slugs from holes.
* DestroyAll shortcut now requires edit mode. Default keybind has been changed from [RCtrl]+[RShift]+[D] to [Delete].
* Default keybind for CommandDropLiveDynamite has been changed from [C] to [LShift]+[C].
* Added edit shortcut to toggle a unit's powered state (the old toggle power shortcut was mislabeled), now renamed ToggleSelfPowered.
* Added cheat shortcut to freeze a unit at mousepoint.
* Added cheat shortcut to spawn dynamite at mousepoint, and separate version to immediately explode.
* Added cheat shortcut to spawn a sonic blaster at mousepoint, and separate version to immediately go off.
* Added cheat shortcut to self-destruct all selected units with an explosion (inspired by Kamikaze Raiders).
* Fixed ice cube object not being deleted with parent objects when using DestroyAll.

--- a/data/Settings/Shortcuts.cfg
+++ b/data/Settings/Shortcuts.cfg
@@ -169,7 +169,7 @@ Lego* {
 		IncreaseGameSpeed						KEYPAD_9
 
 		; Commands selected unit to drop live dynamite.
-		Debug_CommandDropDynamite				!KEY_LEFTSHIFT+!KEY_RIGHTSHIFT+KEY_C
+		Debug_CommandDropDynamite				KEY_LEFTSHIFT+!KEY_RIGHTSHIFT+KEY_C
 		; Registers selected vehicle for Debug_CommandGetInRegisteredVehicle.
 		Debug_CommandRegisterVehicle			!KEY_LEFTCTRL+!KEY_RIGHTCTRL+KEY_K
 		; Commands selected unit to get in registered vehicle.
@@ -186,7 +186,7 @@ Lego* {
 		Debug_StopRouting						KEY_N
 
 		; Toggles power Off/On for currently selected building.
-		Debug_TogglePower						KEY_END
+		Debug_ToggleSelfPowered					KEY_END
 
 		; Ends current advisor animation.
 		Debug_EndAdvisorAnim					!KEY_LEFTSHIFT+KEY_U
@@ -242,7 +242,7 @@ Lego* {
 		; Triggers CrystalFound InfoMessage at block (1,1).
 		Debug_InterfaceCrystalFoundMessage		KEY_LEFTSHIFT+KEY_Y ;KEY_Y
 
-		; Emerges level-designated Monster at mousepoint.
+		; Makes a monster or slug emerge from a valid spawn wall/hole at mousepoint.
 		Debug_EmergeMonster						KEY_E
 		; ( ! ) Commands selected monster to gather a boulder at the nearest wall.
 		Debug_CommandGatherBoulder				KEY_W
@@ -257,7 +257,7 @@ Lego* {
 		TrackUnit								KEY_FOUR
 
 		; Deletes all selected units.
-		Debug_DestroyUnits						KEY_RIGHTCTRL+KEY_RIGHTSHIFT+KEY_D
+		Edit_DestroyUnits						!KEY_RIGHTSHIFT+KEY_DELETE ;KEY_RIGHTCTRL+KEY_RIGHTSHIFT+KEY_D
 		; Levels up selected units to max level, and gives selected mini-figures all abilities.
 		Cheat_MaxOutUnit						KEY_RIGHTSHIFT+KEY_M
 
@@ -312,6 +312,28 @@ Lego* {
 		Cheat_TopdownFPStrafeLeft				KeyBinds::FPStrafeLeft
 		; Strafes (moves) the primary selected unit right in topdown view (while held).
 		Cheat_TopdownFPStrafeRight				KeyBinds::FPStrafeRight
+
+		; Hold down while selecting units to include enemy creatures and spider webs.
+		Edit_SelectMonstersModifier				KEY_T
+		; Hold down while selecting units to include crystals, ore, and equipment.
+		;; WARNING!! Messing with this is unstable, so expect crashes!
+		Edit_SelectResourcesModifier			KEY_R
+		
+		; Toggles the power of a building, or the sleeping state of a monster.
+		Edit_TogglePower						KEY_HOME
+		; Freezes unit at mousepoint in a block of ice for 10 seconds.
+		Cheat_FreezeUnit						KEY_I
+
+		; Spawns dynamite at mousepoint and begins the tickdown.
+		Cheat_PlaceDynamite						!KEY_RIGHTSHIFT+KEY_LEFTBRACE
+		; Spawns dynamite at mousepoint that immediately explodes.
+		Cheat_PlaceDynamiteInstant				KEY_RIGHTSHIFT+KEY_LEFTBRACE
+		; Spawns a sonic blaster at mousepoint and begins the tickdown.
+		Cheat_PlaceSonicBlaster					!KEY_RIGHTSHIFT+KEY_RIGHTBRACE
+		; Spawns a sonic blaster at mousepoint that immediately goes off.
+		Cheat_PlaceSonicBlasterInstant			KEY_RIGHTSHIFT+KEY_RIGHTBRACE
+		; Causes an explosion at the all selected units' positions and kills them in the process.
+		Cheat_KamikazeUnit						KEY_RIGHTSHIFT+KEY_DELETE
 
 
 		; Reloads this configuration file, allowing to change command bindings on the fly.
