Implement: LegoObject_CameraCycleUnits
* Implement and replace CameraCycleUnits functions.
* Add CameraCycleNextUnit shortcut with Shortcuts.cfg keybind of KEYPAD_ENTER.
* Fix unit cycling so that reaching the cap of 256 units won't produce a dud press of the cycle button before working again.
* Replace callback function that specifies buildings or minifigures with one that allows any selection of object types, specified by flags.
* Add LegoObject_TypeFlags, to replace Teleporter object flags, and for user in other areas.
* Add additional helper macros for LegoObject_TypeFlags, LegoObject_AbilityFlags, and LegoObject_UpgradeFlags.

--- a/data/Settings/Shortcuts.cfg
+++ b/data/Settings/Shortcuts.cfg
@@ -335,6 +335,9 @@ Lego* {
 		; Causes an explosion at the all selected units' positions and kills them in the process.
 		Cheat_KamikazeUnit						KEY_RIGHTSHIFT+KEY_DELETE
 
+		; Cycle the camera to the next building (or minifigure if no buildings) in the level.
+		CameraCycleNextUnit						KEYPAD_ENTER ; No keybind defined by default
+
 
 		; Reloads this configuration file, allowing to change command bindings on the fly.
 		ReloadKeyBinds							KEY_LEFTCTRL+KEY_LEFTSHIFT+KEY_K|KEY_RIGHTCTRL+KEY_RIGHTSHIFT+KEY_K
