More (and stricter) command line arguments
* Add cmdline/CommandLine module for handling argument parsing and basic processing.
* Add cmdline/CLGen module to implement CLGen.exe functionality, which we can use to load presets and throw them right into the game, instead of using the registry StandardParameters.
* All command line parsing is now a bit stricter, commands need to be properly spaced apart from each other.
* Enable windows common control visual styles, which brings most dialog windows into the 21st century.
* Added an info log message to state how long Lego_Initialise took to load everything.
* Switched to C++17 (from 14).
* Added new command line arguments, and changed some existing ones.

New Command Line Options:
-pos <X>,<Y> : Change the startup position of the game window.
-res <W>x<H> : Change the default startup resolution of the game (not entirely supported by the engine).
-bpp <depth> : Change the default startup bit depth of the game (not supported at all by the engine).
-scale <number> : Changes the startup window scale (which can also be changed in Options).
-log / -nolog : Enable or disable the console window.
-menu / -nomenu : Enable or disable the system menu bar on startup.

-datadir <directory> : Change the folder where loose Data files are searched for. This replaces the "Data" folder name.
-waddir : Change the folder where WAD files are searched for.
-datafirst / -wadfirst : Change which files have priority for loading.
-noCD / -useCD : Disable or enable loading files from CD.
-nowad / -usewad : Disable or enable loading files from Wads.
-name <name> : A shorthand for using both the -wadname and -gamename options seen below.
-wadname : Changes the name used to look for WAD files with.
-gamename : Changes the root property name used in Lego.cfg lookup. Name should ALWAYS start with "Lego".

-nointro : Disable intro videos/splashes entirely.
-novideo : Disable level intro videos.
-noskip : Disable OpenLRR "skip-all" capabilities for video

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -327,15 +327,16 @@ BEGIN
 END
 
 // CLGen "Video Card selector"
-IDD_SELECTORDIALOG DIALOG  0, 0, 210, 90
+IDD_CLGEN_PRESETDIALOG DIALOG  0, 0, 210, 90
 STYLE DS_SETFONT | DS_NOFAILCREATE | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Selector"
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,45,69,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,114,69,50,14
-    COMBOBOX        IDC_SELECT,7,18,196,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Select:",IDC_SELECTTEXT,7,7,196,11
+    COMBOBOX        IDC_CLGEN_SELECT,7,18,196,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Select:",IDC_CLGEN_SELECTTEXT,7,7,196,11
 END
 
 // OpenLRR "About"
