Implement #55: Add triangle arrow to SelectPlace origin tile
* SelectPlace module now handles rendering a triangle (or arrow) shape over the origin tile of the grid. This is aimed in the rotation of the building, which is useful for placing Mining Lasers and Geological Centers.
* The arrow visibility can be set to Never, Solid Buildings Only, or Always. With Always being the default.
* A dropdown in the Options system menu has been added to control the visibility setting.
* There are a handful of compile-time options for controlling how the arrow is rendered, including switching to the old arrow shape.

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -88,12 +88,16 @@ BEGIN
 //#endif
         MENUITEM "&Dual Mouse",                 IDM_DUALMOUSE
         MENUITEM "Pause When Focus &Lost",      IDM_LOSEFOCUSANDPAUSE,CHECKED
-//#if 0  // not ready yet
         MENUITEM SEPARATOR
+        POPUP "Building Arrow"
+        BEGIN
+            MENUITEM "&Never Show",             IDM_SELECTPLACEARROW_NEVER
+            MENUITEM "Solid Buildings &Only",   IDM_SELECTPLACEARROW_SOLIDONLY
+            MENUITEM "&Always Show",            IDM_SELECTPLACEARROW_ALWAYS,CHECKED
+        END
         MENUITEM "Show &ObjInfo",               IDM_SHOWOBJINFO
         MENUITEM "Show &Panels",                IDM_RENDERPANELS,CHECKED
         MENUITEM "&Tooltip Sound",              IDM_TOOLTIPSOUND,CHECKED
-//#endif
         MENUITEM SEPARATOR
         MENUITEM "Reload &Keybinds"             IDM_RELOAD_KEYBINDS
         POPUP "Logging"
