Implement: Routing path visual debug options
* Research routing fields for LegoObject and RoutingBlock.
* Under Debug > Routing Paths, the user can display the active routes of units in the world.

Routing Path Settings:
* Enabled - Turn on or off visuals (does not forget tracked objects, and all 'Add' options will automatically enable routing paths).
* Show Completed Paths - Paths that units have already traveled in their current route will be shown.
* Show Curve Paths - Precise paths for units' current block-to-block sections of the route will be shown.
* Auto Add - Choose a method for what units will automatically show their routing paths. These units will also automatically be removed if the setting or condition changes.
    * None - No units will automatically show routing paths.
    * Tracked in Radar - Only the unit being tracked by the radar will automatically show its routing path.
    * All Friendly - Only Mini-Figures/Vehicles will automatically show routing paths.
    * All - Mini-Figures/Vehicles/Monsters will all automatically show routing paths.

Routing Path Commands:
* Add Selected - Manually show all selected units' routing paths.
* Add Friendly - Manually show all Mini-Figures/Vehicles' routing paths.
* Add All - Manually show all Mini-Figures/Vehicles/Monsters' routing paths.
* Remove Selected - Stop showing routing paths for selected units (does not affect units that are auto-added).
* Remove All - Stop showing all routing paths (does not affect units that are auto-added).

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -176,6 +176,25 @@ BEGIN
         MENUITEM "ShowDebugToolTips",           IDM_SHOWDEBUGTOOLTIPS
 //#endif
         MENUITEM SEPARATOR
+        POPUP "Routing Paths"
+        BEGIN
+            MENUITEM "Enabled",                 IDM_ROUTING_ENABLED
+            MENUITEM "Show Completed Paths",    IDM_ROUTING_COMPLETEDPATHS
+            MENUITEM "Show Curve Paths",        IDM_ROUTING_CURVEPATHS
+            POPUP "Auto Add"
+            BEGIN
+                MENUITEM "None",                IDM_ROUTING_AUTO_NONE,CHECKED
+                MENUITEM "Tracked in Radar",    IDM_ROUTING_AUTO_TRACKED
+                MENUITEM "All Friendly",        IDM_ROUTING_AUTO_ALLFRIENDLY
+                MENUITEM "All",                 IDM_ROUTING_AUTO_ALL
+            END
+            MENUITEM SEPARATOR
+            MENUITEM "Add Selected",            IDM_ROUTING_ADDSELECTED
+            MENUITEM "Add All Friendly",        IDM_ROUTING_ADDALLFRIENDLY
+            MENUITEM "Add All",                 IDM_ROUTING_ADDALL
+            MENUITEM "Remove Selected",         IDM_ROUTING_REMOVESELECTED
+            MENUITEM "Remove All",              IDM_ROUTING_REMOVEALL
+        END
         POPUP "&Experimental"
         BEGIN
             MENUITEM "Block Fade",              IDM_BLOCKFADE
