Improve audio load speeds for -nointro
See GameState.cpp and Movie.cpp for more info.
* When a movie is successfully loaded, audio load speeds are drastically increased. Generally it's from 7+ seconds total load time down to 2.5-3 seconds.
* Abuse this so that even when using `-nointro`, we still reap the benefits of faster load times, because otherwise `-nointro` would be downright slower to use.
* Added a data file: EmptyAudio.avi - which should be guaranteed to exist so that we can improve load times even when other AVI files are missing.

--- a/src/openlrr/openlrr.vcxproj
+++ b/src/openlrr/openlrr.vcxproj
@@ -115,8 +115,9 @@
     </PostBuildEvent>
     <CustomBuildStep>
       <Command>xcopy /y /d "$(SolutionDir)data\Settings\Shortcuts.cfg" "$(OutDir)Settings\"</Command>
-      <Message>Copying OpenLRR data files</Message>
+      <Command>xcopy /y /d /s "$(SolutionDir)data\Data\" "$(OutDir)Data\"</Command>
       <Outputs>$(OutDir)always_run_this_build_step.txt</Outputs>
+      <Message>Copying OpenLRR data files</Message>
     </CustomBuildStep>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -143,6 +144,7 @@
     </PostBuildEvent>
     <CustomBuildStep>
       <Command>xcopy /y /d "$(SolutionDir)data\Settings\Shortcuts.cfg" "$(OutDir)Settings\"</Command>
+      <Command>xcopy /y /d /s "$(SolutionDir)data\Data\" "$(OutDir)Data\"</Command>
       <Outputs>$(OutDir)always_run_this_build_step.txt</Outputs>
       <Message>Copying OpenLRR data files</Message>
     </CustomBuildStep>
