Refactor and add more utility functions to 2D rendering modules
Refactor and add more utility functions to 2D rendering modules

* DirectDraw now houses RGB-parameter-based functions for clearing the back buffer, clearing *any* surface, and converting to-and-from surface-formatted colours.
* Deprecated DirectDraw functions DirectDraw_GetColour and DirectDraw_Clear in favor of using DirectDraw_ToColourFromRGB* and DirectDraw_ClearRGB*.
* Changed deprecated DirectDraw functions taking bgr colours to use ColourBGRAPacked struct instead of uint32 as parameter type, as this is the same structure (ignoring big endian systems).
* Changed Image COLORREF functions to use ColourRGBAPacked instead of uint32/colour32 as parameter type, as this is the same structure (ignoring big endian systems).
* Added `const void*` version of DirectDraw_GetPixelAddress.
* Added DirectDraw_BitCountToMask for creating masks from bit counts/depths with optional shifts. This primarily exists because of C/C++'s undefined behaviour when left bit shifting at least as many bits as the left hand type size (promoted to 32-bit). Other DirectDraw functions where this can occur have also had safety checks added to avoid undefined behaviour and instead treat >= 32 shift left as a result of 0.
* Fixed List Set functions using left bit shift to also handle this undefined behaviour as expected.
* Added Bmp constant for max number of palette entries (256).
* Added Image_CreateNew for making an empty image+surface of a given size (clears surface to black).
* Images module now has functions to clear an image, following the same conventions as the new DirectDraw_ClearRGB* functions.
* Deprecated old Images module functions Image_GetPenZero, Image_GetPen255, and Image_GetPixel.
    * The first was replaced with Image_GetPaletteEntry0, which returns the value as its surface colour, similar to old Image_GetPen255.
    * And last 2 were changed to NOT convert the value to Big Endian (by bits), and now return the valu

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -195,6 +195,12 @@ BEGIN
             MENUITEM "Remove Selected",         IDM_ROUTING_REMOVESELECTED
             MENUITEM "Remove All",              IDM_ROUTING_REMOVEALL
         END
+        POPUP "Rendering"
+        BEGIN
+            MENUITEM "Draw",                    IDM_RENDERING_DRAW,CHECKED
+            MENUITEM "Images",                  IDM_RENDERING_IMAGES,CHECKED
+            MENUITEM "Fonts",                   IDM_RENDERING_FONTS,CHECKED
+        END
         POPUP "&Experimental"
         BEGIN
             MENUITEM "Block Fade",              IDM_BLOCKFADE
