Experimental: Increase 3D resolution with window scaling
* Game can now render at higher resolutions while maintaining nearest neighbour scaling with the interface. This can only be enabled with a command line option, and cannot be changed at runtime yet.
* Radar map can now zoom in closer (x2) and zoom out farther (x2.5).
* Radar map units will now draw with at least 1 pixel in size.

Command Line Options:
-scale <number> : Now applies to real-resolution scaling that increases the 3D display and radar map resolution.
-nnscale <number> : "Nearest Neighbour" scale, which was the original `-scale` command.
-radarscale <number> : Scale at which radar map draws in absolute pixels, by default the scale will be half of `-scale` (rounded up).

System Menu Options:
* Options > Radar Map Scale : Change the scale of the radar map at runtime.
* Options > Window Scale : Can no longer be changed at runtime if using the `-scale` command, but can be changed if using the `-nnscale` command. This will be fixed in future versions.

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -95,6 +95,13 @@ BEGIN
             MENUITEM "Solid Buildings &Only",   IDM_SELECTPLACEARROW_SOLIDONLY
             MENUITEM "&Always Show",            IDM_SELECTPLACEARROW_ALWAYS,CHECKED
         END
+        POPUP "Radar Map Scale"
+        BEGIN
+            MENUITEM "x&1",                     IDM_RADARMAPSCALE_X1,CHECKED
+            MENUITEM "x&2",                     IDM_RADARMAPSCALE_X2
+            MENUITEM "x&3",                     IDM_RADARMAPSCALE_X3
+            MENUITEM "x&4",                     IDM_RADARMAPSCALE_X4
+        END
         MENUITEM "Show &ObjInfo",               IDM_SHOWOBJINFO
         MENUITEM "Show &Panels",                IDM_RENDERPANELS,CHECKED
         MENUITEM "&Tooltip Sound",              IDM_TOOLTIPSOUND,CHECKED
@@ -108,14 +115,14 @@ BEGIN
             MENUITEM "Warning",                 IDM_LOGGING_WARNING,CHECKED
             MENUITEM "Fatal",                   IDM_LOGGING_FATAL,CHECKED
         END
-        POPUP "&Scale"
+        POPUP "Window &Scale"
         BEGIN
-            MENUITEM "x&1",                     IDM_SCALE_X1,CHECKED
-            MENUITEM "x&2",                     IDM_SCALE_X2
-            MENUITEM "x&3",                     IDM_SCALE_X3
-            MENUITEM "x&4",                     IDM_SCALE_X4
+            MENUITEM "x&1",                     IDM_WINDOWSCALE_X1,CHECKED
+            MENUITEM "x&2",                     IDM_WINDOWSCALE_X2
+            MENUITEM "x&3",                     IDM_WINDOWSCALE_X3
+            MENUITEM "x&4",                     IDM_WINDOWSCALE_X4
         END
-        POPUP "&Cursor"
+        POPUP "&Cursor Visibility"
         BEGIN
             MENUITEM "&Never Show",             IDM_CURSOR_NEVER,CHECKED
             MENUITEM "Show in &Title Bar",      IDM_CURSOR_TITLEBAR
