Add follow unit command and faster unit cheat
* Added new shortcut: FollowUnit ([LShift]+[4]), which follows the primary selected unit in topdown view.
* Added new shortcut: Cheat_FasterUnit ([RShift] while held), which increases unit movement and turning speed. There's a bunch of extra logic in-place for this cheat to handle units that are too fast or too slow.

--- a/data/Settings/Shortcuts.cfg
+++ b/data/Settings/Shortcuts.cfg
@@ -211,7 +211,7 @@ Lego* {
 
 
 		; Toggles music ON/OFF.
-		ToggleMusic								!KEY_LEFTCTRL+!KEY_RIGHTCTRL+!KEY_LEFTSHIFT+!KEY_RIGHTSHIFT+KEY_M
+		ToggleMusic								!KEY_ALT+!KEY_ALTGR+!KEY_LEFTCTRL+!KEY_RIGHTCTRL+!KEY_LEFTSHIFT+!KEY_RIGHTSHIFT+KEY_M
 		; Toggles sound ON/OFF.
 		ToggleSound								!KEY_LEFTCTRL+!KEY_RIGHTCTRL+!KEY_LEFTSHIFT+!KEY_RIGHTSHIFT+KEY_S
 
@@ -254,12 +254,16 @@ Lego* {
 		; Changes to top-down view.
 		ChangeViewTop							KEY_THREE
 		; Tracks the selected unit in the radar.
-		TrackUnit								KEY_FOUR
+		TrackUnit								!KEY_LEFTSHIFT+KEY_FOUR
+		; Follows the selected unit in top-down view.
+		FollowUnit								KEY_LEFTSHIFT+KEY_FOUR
+		; Speed up first-person unit movement and turning (while held).
+		Cheat_FasterUnit						KEY_RIGHTSHIFT
 
 		; Deletes all selected units.
 		Edit_DestroyUnits						!KEY_RIGHTSHIFT+KEY_DELETE ;KEY_RIGHTCTRL+KEY_RIGHTSHIFT+KEY_D
 		; Levels up selected units to max level, and gives selected mini-figures all abilities.
-		Cheat_MaxOutUnit						KEY_RIGHTSHIFT+KEY_M
+		Cheat_MaxOutUnit						!KEY_ALT+!KEY_ALTGR+KEY_RIGHTSHIFT+KEY_M
 
 		; Toggles selected unit's Carry upgrade model (visual only).
 		Debug_ToggleUpgradeCarry				KEY_FIVE
@@ -314,7 +318,7 @@ Lego* {
 		Cheat_TopdownFPStrafeRight				KeyBinds::FPStrafeRight
 
 		; Hold down while selecting units to include enemy creatures and spider webs.
-		Edit_SelectMonstersModifier				KEY_T
+		Edit_SelectMonstersModifier				!KEY_ALT+!KEY_ALTGR+KEY_T
 		; Hold down while selecting units to include crystals, ore, and equipment.
 		;; WARNING!! Messing with this is unstable, so expect crashes!
 		Edit_SelectResourcesModifier			KEY_R
