Feature: Graphics option for topdown LOD
* Under Options > Graphics > Topdown LOD, the level of detail for units can be changed so that you can see higher quality models outside of First Person view.
* Currently the handling is a little awkward due to assumptions about default values, and handling of Medium poly levels which look very awkward on MiniFigure units.
* So setting LOD to high will either draw units at Low or High LODs, and setting to Medium will either draw units at Low or Medium LOD. (Note: non-MiniFigure units treat Medium LODs as both Medium and High, so they will still be included when using High LOD).

--- a/resources/OpenLRR.rc
+++ b/resources/OpenLRR.rc
@@ -152,6 +152,12 @@ BEGIN
             MENUITEM "D&ynamic Promeshes",      IDM_DYNAMICPM
 //#endif
             MENUITEM "&Topdown Fog",            IDM_TOPDOWNFOG
+            POPUP "Topdown LOD"
+            BEGIN
+                MENUITEM "&Low",                IDM_TOPDOWNLOD_LOW,CHECKED
+                MENUITEM "&Medium",             IDM_TOPDOWNLOD_MEDIUM
+                MENUITEM "&High",               IDM_TOPDOWNLOD_HIGH
+            END
             MENUITEM SEPARATOR
             POPUP "&Quality"
             BEGIN
